[package]
name = "lingo_lib"
authors = ["Antonin Hérault <antonherault@gmail.com>"]
version = "0.2.1"
edition = "2021"
description = "Internationalise a Rust program and translate strings quickly and simply. Make any software open to multiple languages"
license = "MIT"
repository = "https://github.com/antoninhrlt/lingo"
readme = "README.md"
keywords = ["languages", "l10n", "internationalization", "applications", "library"]

[dependencies]
sys-locale = "0.2.3"
strum = "0.24.1"
strum_macros = "0.24.3"
